# app/Http/Resources/Api/DeceasedProfileApiResource.php
@@ -22,7 +22,7 @@ class DeceasedProfileApiResource extends JsonResource
             "birthday"=>$this->birthday->format('Y-m-d'),
             "death"=>$this->death->format('Y-m-d'),
             "adviser"=>new AdviserApiResource($this->adviser),
-            "photo"=>$this->photo
+            "photo"=>$this->urlPhoto
         ];
     }
 
@@ -37,7 +37,7 @@ class DeceasedProfileApiResource extends JsonResource
      *      @OA\Property(property="birthday", type="date", example="1965-08-11"),
      *      @OA\Property(property="death", type="date", example="2021-03-20"),
      *      @OA\Property(property="adviser", ref="#/components/schemas/AdviserApiResource"),
-     *      @OA\Property(property="photo", type="string", example="httpS://albia.celebratuvida.es/fdfhjduruiuinsdkd.jpg"),
+     *      @OA\Property(property="photo", type="string", example="https://albia.celebratuvida.es/fdfhjduruiuinsdkd.jpg"),
      * )
      */
 }
